# computacaoInspiradaPelaNatureza

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
Debug/: CIN2019-Exercicio01  makefile
Debug/src/: subdir.mk
Debug/src/lib/: subdir.mk
Release/: CIN2019-Exercicio01
Release/src/: subdir.mk
Release/src/lib/: subdir.mk
dataSets/irisDataSet/: irisTesting.data  irisTraining.data  irisValidating.data
dataSets/wineDataSet/: wineTest.data  wineTraining.data  wineValidating.data
documents/: .gitignore  AnaliseDeRedesNeuraisArtificiais.ods  AnaliseDeRedesNeuraisArtificiais.odt  AnalisePSOeACO.odt  Relatorio.odt  confusionMatrixForNeuralNetworks.ods
gnuplotScripts/: vectorsPlot.gplot
octaveScripts/: genGeneticStatistics.m  genGraphScripts.m  genHillStatistics.m  hillGraphScripts.m
src/: ACOMap.cpp  Ant.cpp  CIN2019-Exercicio01.cpp  Connection.cpp  Habitant.cpp  PSOClass.cpp  PSOMap.cpp  Point.cpp  main.cpp  main_old.cpp
src/acoExperiments/: Experiment01.cpp  Experiment02.cpp  Experiment03.cpp  Experiment04.cpp  Experiment05.cpp  Experiment06.cpp
src/geneticExperiments/: Experiment01.cpp  Experiment02.cpp  Experiment03.cpp  Experiment04.cpp  GeneticExperience.cpp
src/hillClimbingAnnealingExperiments/: Experiment01.cpp  Experiment01_.cpp  Experiment02.cpp  Experiment03.cpp  Experiment04.cpp  Experiment05.cpp
src/lib/: ACOAnt.cpp  ACOMap.cpp  ACOPoint.cpp  Gen.cpp  NeuralNetwork.cpp  Neuron.cpp  PSO.cpp  PSOLimits.cpp  PSONeighborhood.cpp  PSOParticle.cpp  SquareMatrix.cpp  annealing.cpp  annealing.h  fileWriter.cpp  fileWriter.h  gaussianRandom.cpp  gaussianRandom.h  geometry.cpp  geometry.h  hillClimbing.cpp  hillClimbing.h  stochasticProbability.cpp  stochasticProbability.h  variableSizes.cpp  variableSizes.h  variables.cpp  variables.h
src/neuralExperiments/: Experiment01.cpp  Experiment02.cpp  Experiment03.cpp  Experiment04.cpp  Experiment05.cpp  Experiment06.cpp  Experiment07.cpp  Experiment08.cpp  Experiment09.cpp  Experiment10.cpp
src/psoExperiments/: Experiment01.cpp  Experiment02.cpp
